Added meta descriptions.

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@ layout: default
 title: Contact Us
 permalink: /contact/
 body_class: contact
+excerpt: Contact us for help with existing policies, or help issuing a new policy.
 ---
 
 <div itemscope itemtype="http://schema.org/LocalBusiness">
