--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@ excerpt: Contact us for help with existing policies, or help issuing a new polic
     </a>
   </div>
   <div class="col-sm-6">
-    <iframe width="600" height="450" frameborder="0"
+    <iframe width="100%" height="420" frameborder="0"
       style="border:0"
       src="https://www.google.com/maps/embed/v1/place?q=Mexpro.com%20Mexico%20Insurance%2C%20East%20Birch%20Avenue%2C%20Flagstaff%2C%20AZ%2C%20United%20States&amp;key=AIzaSyBqFoK0EKZ-dFy20W8IjV_QtNA_VKaCKq8">
     </iframe>
